Update to 0.85 (official)
Official update to 0.85.  Check CHANGELOG.txt for more info.

--- a/NUSGrabberGUI/App.config
+++ b/NUSGrabberGUI/App.config
@@ -31,13 +31,16 @@
             <setting name="LoadTitles" serializeAs="String">
                 <value>True</value>
             </setting>
-            <setting name="UseOrigNUS" serializeAs="String">
-                <value>True</value>
+            <setting name="UseEmbedNUS" serializeAs="String">
+                <value>False</value>
             </setting>
             <setting name="ArchivedDatabase" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="Cleanup" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="UseOrigNUS" serializeAs="String">
                 <value>False</value>
             </setting>
         </NUSGrabberGUI.Properties.Settings>
