Update to 0.89 (official)
Official update to 0.89.  Check CHANGELOG.txt for more info.

--- a/NUSGrabberGUI/App.config
+++ b/NUSGrabberGUI/App.config
@@ -38,7 +38,7 @@
                 <value>False</value>
             </setting>
             <setting name="Cleanup" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="UseOrigNUS" serializeAs="String">
                 <value>False</value>
@@ -48,7 +48,7 @@
     <applicationSettings>
         <NUSGrabberGUI.Properties.Settings>
             <setting name="Version" serializeAs="String">
-                <value>88</value>
+                <value>89</value>
             </setting>
             <setting name="VersionType" serializeAs="String">
                 <value>beta</value>
