--- a/NUSGrabberGUI/Properties/Settings.settings
+++ b/NUSGrabberGUI/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">USA</Value>
     </Setting>
     <Setting Name="Version" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">88</Value>
+      <Value Profile="(Default)">89</Value>
     </Setting>
     <Setting Name="VersionType" Type="System.String" Scope="Application">
       <Value Profile="(Default)">beta</Value>
@@ -33,7 +33,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="Cleanup" Type="System.Boolean" Scope="User">
-      <Value Profile="(Default)">False</Value>
+      <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="UseOrigNUS" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
