Update to 0.90 (official)
Official update to 0.90.  Check CHANGELOG.txt for more info.

--- a/NUSGrabberGUI/App.config
+++ b/NUSGrabberGUI/App.config
@@ -43,12 +43,15 @@
             <setting name="UseOrigNUS" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Language" serializeAs="String">
+                <value>en</value>
+            </setting>
         </NUSGrabberGUI.Properties.Settings>
     </userSettings>
     <applicationSettings>
         <NUSGrabberGUI.Properties.Settings>
             <setting name="Version" serializeAs="String">
-                <value>89</value>
+                <value>91</value>
             </setting>
             <setting name="VersionType" serializeAs="String">
                 <value>beta</value>
