--- a/NUSGrabberGUI/NUSGrabberGUI.csproj
+++ b/NUSGrabberGUI/NUSGrabberGUI.csproj
@@ -25,7 +25,7 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>0.6.1.%2a</ApplicationVersion>
+    <ApplicationVersion>0.9.1.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
@@ -112,6 +112,11 @@
     <Compile Include="NusClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Resources\en.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>en.resx</DependentUpon>
+    </Compile>
     <Compile Include="Settings.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -136,6 +141,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Resources\en.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>en.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Settings.resx">
       <DependentUpon>Settings.cs</DependentUpon>
     </EmbeddedResource>
@@ -171,8 +180,6 @@
     <Content Include="NUSGrabberGUI.ico" />
     <None Include="Resources\NUSgrabberORIG.exe" />
     <None Include="Resources\NUSgrabber.exe" />
-    <None Include="Resources\msvcp140.dll" />
-    <None Include="Resources\msvcr120.dll" />
     <None Include="Resources\wiiu_versionlist.txt" />
     <None Include="Resources\HtmlAgilityPack.dll" />
     <None Include="Resources\wget.exe" />
