--- a/NUSGrabberGUI/Properties/Settings.settings
+++ b/NUSGrabberGUI/Properties/Settings.settings
@@ -9,7 +9,7 @@
       <Value Profile="(Default)">USA</Value>
     </Setting>
     <Setting Name="Version" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">89</Value>
+      <Value Profile="(Default)">90</Value>
     </Setting>
     <Setting Name="VersionType" Type="System.String" Scope="Application">
       <Value Profile="(Default)">beta</Value>
@@ -37,6 +37,9 @@
     </Setting>
     <Setting Name="UseOrigNUS" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">False</Value>
+    </Setting>
+    <Setting Name="Language" Type="System.String" Scope="User">
+      <Value Profile="(Default)">en</Value>
     </Setting>
   </Settings>
 </SettingsFile>
