Optimized the initial list parsing (was incredibly slow in development due to the many thrown exceptions).
If the folder is not empty and can't be cleared we'll open it using Explorer to make the user's life easier.

Added a download log window, basic initial version.

--- a/NUSGrabberGUI/NUSGrabberGUI.csproj
+++ b/NUSGrabberGUI/NUSGrabberGUI.csproj
@@ -99,6 +99,12 @@
     <Compile Include="CertificateChain.cs" />
     <Compile Include="CommonKey.cs" />
     <Compile Include="ContentIndices.cs" />
+    <Compile Include="FrmDownloadLog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmDownloadLog.Designer.cs">
+      <DependentUpon>FrmDownloadLog.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -128,6 +134,10 @@
     <Compile Include="TMD.cs" />
     <Compile Include="U8.cs" />
     <Compile Include="WAD.cs" />
+    <EmbeddedResource Include="FrmDownloadLog.resx">
+      <DependentUpon>FrmDownloadLog.cs</DependentUpon>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
